# signature_detector

./: Dockerfile  README.md  pyproject.toml
src/signature_detector/: .env  bootstrap.py  settings.py
src/signature_detector/adapter/: __init__.py  adapter.py
src/signature_detector/api/: run_api.py
src/signature_detector/domain/: __init__.py  abstractions.py  model.py  use_case.py
src/signature_detector/gateway/: __init__.py  application.py  handler.py  schemas.py
src/signature_detector/storage/: repository.py  table.py
src/word_detector_original_package/: README.md
src/word_detector_original_package/model/: .gitignore
src/word_detector_original_package/src/: dataloader.py  infer.py
tests/: conftest.py
tests/end_to_end/: conftest.py  test_service.py
tests/integration/: test_adapter.py  test_repository.py
tests/unit/: test_model.py  test_use_case.py
